--- a/app/src/main/res/drawable/spinner_background.xml
+++ b/app/src/main/res/drawable/spinner_background.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#FFFFFF"/>
-    <corners android:radius="5dp"/>
-    <stroke android:width="1dp" android:color="#CCCCCC"/>
-
-    <!-- Arrow indicator at the right -->
-    <padding
-        android:right="8dp"
-        android:left="8dp"
-        android:top="8dp"
-        android:bottom="8dp"/>
-</shape>
+<!-- res/drawable/spinner_background.xml -->
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <layer-list>
+            <item>
+                <shape android:shape="rectangle">
+                    <solid android:color="@android:color/transparent" />
+                    <stroke android:width="1dp" android:color="@color/text_gray_color" />
+                    <corners android:radius="8dp" />
+                    <padding android:left="12dp" android:top="12dp" android:right="12dp" android:bottom="12dp" />
+                </shape>
+            </item>
+        </layer-list>
+    </item>
+</selector>
