--- a/app/src/main/res/layout/item_event.xml
+++ b/app/src/main/res/layout/item_event.xml
@@ -1,133 +1,149 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/cardStatus"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="4dp"
-    android:backgroundTint="@color/background_color"
+    android:layout_marginBottom="8dp"
+    android:backgroundTint="@color/white"
     app:cardCornerRadius="12dp"
-    app:cardElevation="2dp">
+    app:cardElevation="1dp"
+    app:rippleColor="@color/primary_color">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="16dp">
+        android:padding="12dp">
 
-        <!-- Image View on the left -->
-        <ImageView
-            android:id="@+id/ivRoomImage"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_gravity="center"
-            android:layout_marginEnd="16dp"
-            android:background="#F5F5F5"
-            android:src="@drawable/pic_check"
-            android:scaleType="centerCrop" />
+        <!-- Room Image -->
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/image_container"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:backgroundTint="@color/background_color"
+            app:cardCornerRadius="8dp"
+            app:cardElevation="0dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <!-- Top row with title and status -->
-            <RelativeLayout
+            <ImageView
+                android:id="@+id/ivRoomImage"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="match_parent"
+                android:contentDescription="Room image"
+                android:scaleType="centerCrop"
+                android:src="@drawable/pic_check"
+                tools:src="@drawable/pic_check" />
 
-                <TextView
-                    android:id="@+id/tvEventTitle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentStart="true"
-                    android:fontFamily="@font/poppins_medium"
-                    android:textColor="@color/text_color"
-                    android:textSize="16sp"
-                    android:text="Meeting Room-001" />
+        </com.google.android.material.card.MaterialCardView>
 
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/ic_change_phone"
-                    android:layout_width="75dp"
-                    android:layout_height="24dp"
-                    android:layout_alignParentTop="true"
-                    android:layout_alignParentEnd="true"
-                    android:layout_marginTop="0dp"
-                    android:layout_marginEnd="0dp"
-                    android:backgroundTint="@color/white">
+        <!-- Content Container -->
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="12dp"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/status_container"
+            app:layout_constraintStart_toEndOf="@id/image_container"
+            app:layout_constraintTop_toTopOf="parent">
 
-                    <TextView
-                        android:id="@+id/tvStatus"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_alignParentEnd="true"
-                        android:fontFamily="@font/poppins_regular"
-                        android:text="Booked"
-                        android:textColor="#4CAF50"
-                        android:textSize="12sp" />
-                </androidx.cardview.widget.CardView>
-            </RelativeLayout>
+            <!-- Event Title -->
+            <TextView
+                android:id="@+id/tvEventTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/poppins_semibold"
+                android:textColor="@color/text_color"
+                android:textSize="16sp"
+                android:layout_marginBottom="4dp"
+                tools:text="Meeting Room-001" />
 
             <!-- Date/Time details -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
                 android:orientation="vertical">
 
                 <!-- Start Date/Time -->
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:layout_marginBottom="2dp">
 
                     <TextView
                         android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:fontFamily="@font/poppins_regular"
-                        android:text="Start-DateTime    :"
+                        android:text="Start: "
                         android:textColor="@color/text_gray_color"
                         android:textSize="12sp" />
 
                     <TextView
                         android:id="@+id/tvStartDateTime"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="4dp"
-                        android:fontFamily="@font/poppins_regular"
+                        android:layout_weight="1"
+                        android:fontFamily="@font/poppins_medium"
                         android:textColor="@color/text_color"
                         android:textSize="12sp"
-                        android:text="30 May - 09:00 AM" />
+                        tools:text="30 May - 09:00 AM" />
                 </LinearLayout>
 
                 <!-- Finish Date/Time -->
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
                     android:orientation="horizontal">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Finish-DateTime   :"
+                        android:text="Finish: "
                         android:fontFamily="@font/poppins_regular"
                         android:textColor="@color/text_gray_color"
                         android:textSize="12sp" />
 
                     <TextView
                         android:id="@+id/tvFinishDateTime"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="4dp"
-                        android:fontFamily="@font/poppins_regular"
+                        android:layout_weight="1"
+                        android:fontFamily="@font/poppins_medium"
                         android:textColor="@color/text_color"
                         android:textSize="12sp"
-                        android:text="30 May - 12:00 PM" />
+                        tools:text="30 May - 12:00 PM" />
                 </LinearLayout>
             </LinearLayout>
+
         </LinearLayout>
-    </LinearLayout>
+
+        <!-- Status Badge -->
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/status_container"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/background_color"
+            app:cardCornerRadius="10dp"
+            app:cardElevation="0dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <TextView
+                android:id="@+id/tvStatus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/poppins_semibold"
+                android:paddingHorizontal="10dp"
+                android:paddingVertical="4dp"
+                android:textColor="@color/primary_color"
+                android:textSize="11sp"
+                tools:text="Booked" />
+
+        </com.google.android.material.card.MaterialCardView>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 </com.google.android.material.card.MaterialCardView>
