--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -25,5 +25,23 @@
         <item name="android:textColor">@color/text_gray_color</item>
     </style>
 
+    <style name="MyProgressBar" parent="Theme.AppCompat">
+        <item name="colorAccent">@color/white</item>
+    </style>
+
+    <!-- Light Mode (res/values/styles.xml) -->
+    <style name="SpinnerTimePickerTheme" parent="Theme.AppCompat.Light.Dialog">
+        <item name="android:timePickerStyle">@style/SpinnerTimePicker</item>
+        <!-- Warna untuk Light Mode -->
+        <item name="colorPrimary">@color/primary_color</item>  <!-- Warna tombol OK/Cancel -->
+        <item name="colorAccent">@color/accent_color</item>    <!-- Warna seleksi -->
+        <item name="android:textColorPrimary">@color/text_color</item>  <!-- Warna angka -->
+        <item name="android:colorBackground">@color/white</item>  <!-- Background spinner -->
+    </style>
+
+    <style name="SpinnerTimePicker" parent="android:Widget.Material.TimePicker">
+        <item name="android:timePickerMode">spinner</item>
+    </style>
+
     <style name="Theme.MyAppBooking" parent="Base.Theme.MyAppBooking" />
 </resources>
