--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_color"
-    tools:context=".DashboardFragment">
+    tools:context=".ui.fragment.DashboardFragment">
 
     <!-- Scrollable Content -->
     <androidx.core.widget.NestedScrollView
@@ -76,22 +76,22 @@
                         android:textSize="20sp" />
                 </LinearLayout>
 
-                <com.google.android.material.card.MaterialCardView
-                    android:id="@+id/cardNotif"
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
-                    android:backgroundTint="@color/white"
-                    app:cardCornerRadius="24dp"
-                    app:cardElevation="2dp">
+<!--                <com.google.android.material.card.MaterialCardView-->
+<!--                    android:id="@+id/cardNotif"-->
+<!--                    android:layout_width="48dp"-->
+<!--                    android:layout_height="48dp"-->
+<!--                    android:backgroundTint="@color/white"-->
+<!--                    app:cardCornerRadius="24dp"-->
+<!--                    app:cardElevation="2dp">-->
 
-                    <ImageView
-                        android:id="@+id/notifiation_icon"
-                        android:layout_width="24dp"
-                        android:layout_height="24dp"
-                        android:layout_gravity="center"
-                        android:src="@drawable/ic_bell"
-                        app:tint="@color/primary_color" />
-                </com.google.android.material.card.MaterialCardView>
+<!--                    <ImageView-->
+<!--                        android:id="@+id/notifiation_icon"-->
+<!--                        android:layout_width="24dp"-->
+<!--                        android:layout_height="24dp"-->
+<!--                        android:layout_gravity="center"-->
+<!--                        android:src="@drawable/ic_bell"-->
+<!--                        app:tint="@color/primary_color" />-->
+<!--                </com.google.android.material.card.MaterialCardView>-->
             </LinearLayout>
 
             <!-- Search Bar -->
