--- a/app/src/main/res/layout/activity_email_verification.xml
+++ b/app/src/main/res/layout/activity_email_verification.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_color"
-    tools:context=".EmailVerificationActivity">
+    tools:context=".ui.activity.EmailVerificationActivity">
 
 <ScrollView
     android:layout_width="match_parent"
