--- a/app/src/main/res/layout/activity_success_sent.xml
+++ b/app/src/main/res/layout/activity_success_sent.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_color"
-    tools:context=".SuccessSentActivity">
+    tools:context=".ui.activity.SuccessSentActivity">
 
     <ScrollView
         android:layout_width="match_parent"
