--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -28,7 +28,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_marginBottom="32dp"
                 android:gravity="center_vertical">
 
                 <LinearLayout
@@ -54,32 +53,32 @@
                         android:textSize="14sp" />
                 </LinearLayout>
 
-                <com.google.android.material.card.MaterialCardView
-                    android:id="@+id/profile_icon_card"
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
-                    android:backgroundTint="@color/white"
-                    app:cardCornerRadius="24dp"
-                    app:cardElevation="2dp">
+<!--                <com.google.android.material.card.MaterialCardView-->
+<!--                    android:id="@+id/profile_icon_card"-->
+<!--                    android:layout_width="48dp"-->
+<!--                    android:layout_height="48dp"-->
+<!--                    android:backgroundTint="@color/white"-->
+<!--                    app:cardCornerRadius="24dp"-->
+<!--                    app:cardElevation="2dp">-->
 
-                    <ImageView
-                        android:layout_width="24dp"
-                        android:layout_height="24dp"
-                        android:layout_gravity="center"
-                        android:src="@drawable/ic_profile"
-                        app:tint="@color/primary_color" />
-                </com.google.android.material.card.MaterialCardView>
+<!--                    <ImageView-->
+<!--                        android:layout_width="24dp"-->
+<!--                        android:layout_height="24dp"-->
+<!--                        android:layout_gravity="center"-->
+<!--                        android:src="@drawable/ic_profile"-->
+<!--                        app:tint="@color/primary_color" />-->
+<!--                </com.google.android.material.card.MaterialCardView>-->
             </LinearLayout>
 
             <!-- Profile Card -->
-            <com.google.android.material.card.MaterialCardView
-                android:id="@+id/profileInfoContainer"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="32dp"
-                android:backgroundTint="@color/white"
-                app:cardCornerRadius="12dp"
-                app:cardElevation="2dp">
+<!--            <com.google.android.material.card.MaterialCardView-->
+<!--                android:id="@+id/profileInfoContainer"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginBottom="32dp"-->
+<!--                android:backgroundTint="@color/white"-->
+<!--                app:cardCornerRadius="12dp"-->
+<!--                app:cardElevation="2dp">-->
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -138,7 +137,7 @@
                         android:textColor="@color/primary_color"
                         android:textSize="12sp" />
                 </LinearLayout>
-            </com.google.android.material.card.MaterialCardView>
+<!--            </com.google.android.material.card.MaterialCardView>-->
 
             <!-- Account Settings Section -->
             <LinearLayout
@@ -153,6 +152,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:layout_marginTop="8dp"
                     android:orientation="vertical">
 
                     <TextView
