--- a/app/src/main/res/layout/item_event_with_return.xml
+++ b/app/src/main/res/layout/item_event_with_return.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/cardItem"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="16dp"
@@ -137,17 +138,19 @@
         <!-- Return Button -->
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btnReturn"
+            android:layout_marginTop="8dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:text="Return Item"
+            android:layout_height="55dp"
+            android:text="Return"
+            android:textColor="@color/white"
             android:textSize="14sp"
-            android:visibility="gone"
-            app:cornerRadius="20dp"
-            app:icon="@drawable/ic_door"
-            app:iconGravity="textStart"
-            app:iconPadding="8dp"
-            style="@style/Widget.Material3.Button.UnelevatedButton" />
+            app:backgroundTint="@color/primary_color"
+            app:strokeColor="@color/white"
+            android:fontFamily="@font/poppins_semibold"
+            app:strokeWidth="1dp"
+            app:cornerRadius="12dp"
+            android:elevation="2dp"
+            app:rippleColor="@color/white" />
 
     </LinearLayout>
 
