--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,10 @@
     <color name="text_gray_color">#9B9EA0</color>
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
-    <color name="dark_overlay">#60000000</color> <!-- 40% black overlay -->
+    <color name="orange_color">#FF9800</color>
+    <color name="purple_color">#9C27B0</color>
+    <color name="status_pending">#FFA000</color>
+    <color name="status_approved">#4CAF50</color>
+    <color name="status_rejected">#F44336</color>
+    <color name="dark_overlay">#60000000</color>
 </resources>
